syntax = "proto3";
package cheqd.oracle.v2;

import "cheqd/oracle/v2/oracle.proto";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/cheqd/cheqd-node/x/oracle/types";
option (gogoproto.goproto_getters_all) = false;

// OracleVoteExtension defines the vote extension structure used by the oracle
// module.
message OracleVoteExtension {
  int64 height = 1;
  repeated cosmos.base.v1beta1.DecCoin exchange_rates = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false
  ];
}

// InjectedVoteExtensionTx defines the vote extension tx injected by the prepare
// proposal handler.
message InjectedVoteExtensionTx {
  repeated AggregateExchangeRateVote exchange_rate_votes = 1 [(gogoproto.nullable) = false];
  bytes extended_commit_info = 2;
}
